--- a/src/components/Events/Events.css
+++ b/src/components/Events/Events.css
@@ -69,7 +69,7 @@
     text-align: left;
     text-transform: uppercase;
 }
-.event {
+.Event_event {
     position: absolute;
     width: 202px;
     height: 69px;
