--- a/src/components/index.html
+++ b/src/components/index.html
@@ -6,9 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>INIZIO - 25</title>
    <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+      crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
    <script src="script.js" defer></script>
 
@@ -16,90 +16,6 @@
 
 
 <body>
-   <header>
-      <nav>
-         <div class="navbar">
-            <div class="navigation">
-
-               <div class="logo"> <a href="#"><img src="assets/logo.svg" alt="Logo"> </a></div>
-
-               <div class="nav-tab">
-                  <div class="nav-btn">
-                     <a href="index.html">
-                        <h3>HOME</h3>
-                     </a>
-                  </div>
-                  <div class="nav-btn">
-                     <a href="https://github.com/aanshik-dev">
-                        <h3>EVENTS</h3>
-                     </a>
-                  </div>
-
-                  <div class="gear"> <a href="#"><img src="assets/gear.svg" alt="Gear"></a></div>
-                  <div class="nav-btn">
-                     <a href="https://github.com/aanshik-dev">
-                        <h3>TEAM</h3>
-                     </a>
-                  </div>
-                  <div class="nav-btn gear-right">
-                     <a href="sponsors.html">
-                        <h3>SPONSORS</h3>
-                     </a>
-                  </div>
-                  <div class="nav-btn gear-right">
-                     <a href="https://github.com/aanshik-dev">
-                        <h3 style="white-space: nowrap;">CONTACT US</h3>
-                     </a>
-                  </div>
-               </div>
-               <div class="mob-gear"><img class="rot" src="assets/gear.svg" alt="Gear"></div>
-            </div>
-
-            <!-- Mobile -->
-         </div>
-         <div class="black-overlay"></div>
-         <div class="nav-hid">
-            <div class="side-nav">
-               <div class="mob-tab">
-                  <a class="mob-link" href="index.html" target="_blank">
-                     <h3>HOME</h3>
-                  </a>
-                  <a class="mob-link" href="https://github.com/aanshik-dev">
-                     <h3>EVENTS</h3>
-                  </a>
-                  <a class="mob-link" href="https://github.com/aanshik-dev">
-                     <h3>TEAM</h3>
-                  </a>
-                  <a class="mob-link" href="sponsors.html">
-                     <h3>SPONSORS</h3>
-                  </a>
-                  <a class="mob-link" href="https://github.com/aanshik-dev">
-                     <h3>CONTACT US</h3>
-                  </a>
-               </div>
-               <div class="cross">
-                  <i class="fa-solid fa-xmark"></i>
-               </div>
-            </div>
-            <div class="tri">
-               <div class="left-tri"></div>
-               <div class="right-tri">
-                  <div class="in-tri"></div>
-               </div>
-            </div>
-            <div class="tri top">
-               <div class="top-left-tri">
-                  <div class="in-tri top-in-tri"></div>
-               </div>
-               <div class="top-right-tri">
-               </div>
-            </div>
-         </div>
-      </nav>
-   </header>
-
-
-   <main>
       <section>
          <div class="banner">
             <div>
@@ -395,56 +311,7 @@
             </div>
          </div>
       </section>
-   </main>
 
-
-   <footer>
-      <div class="footer overlay-box">
-         <div class="foot-content">
-            <div class="f-logo-box">
-               <div>
-                  <div class="foot-gear"></div>
-                  <div class="foot-logo"></div>
-               </div>
-               <div class="logo-des">THE MOST INNOVATIVE ENTREPRENEURSHIP<br>SUMMIT OF INDIA</div>
-            </div>
-            <div class="foot-text">
-               <div id="address">
-                  <h4>ADDRESS</h4>
-                  <p>E-CELL, IIIT GUWAHATI</p>
-                  <p>ASSAM 781015</p>
-               </div>
-               <div id="contact">
-                  <h4>EMAIL</h4>
-                  <p>ecell@iiitg.ac.in</p>
-               </div>
-               <div id="follow">
-                  <h4>FOLLOW US</h4>
-                  <div class="icons">
-                     <div class="icon">
-                        <a id="insta"
-                           href="https://www.instagram.com/inizio.iiitguwahati?utm_source=qr&igsh=MWhwaGM1dTVjazd6aA=="
-                           target="_blank">
-                           <i class="fa-brands fa-instagram"></i>
-                        </a>
-                     </div>
-                     <div id="linkedin" class="icon">
-                        <a href="https://www.linkedin.com/company/e-cell-iiit-guwahati/?originalSubdomain=in"
-                           target="_blank">
-                           <i class="fa-brands fa-linkedin"></i>
-                        </a>
-                     </div>
-                  </div>
-               </div>
-            </div>
-
-         </div>
-         <div class="copyright">
-            <p>MADE IN PANIC BY ECELL TECHNICAL TEAM (2025)</p>
-         </div>
-      </div>
-
-   </footer>
 
 </body>
 
