--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,14 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    transition: all 0.15s ease-in-out;
-    /* box-sizing: border-box; */
-}
+
 
 @font-face {
     font-family: "Roboto";
@@ -88,430 +80,20 @@
 }
 
 /* Universal styles */
-body {
+/* body {
     font-family: RobotoRegular, Arial, Helvetica;
     position: relative;
     background-color: #131313;
-}
-
-/* Desktop Navbar Begins Here */
-.navbar {
-    padding-top: 15px;
-    position: fixed;
-    width: 100vw;
-    z-index: 10;
-    background-color: rgba(255, 107, 0, 0.3);
-    -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px);
-}
-
-.navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-.logo > a > img {
-    background-size: contain;
-    height: 50px;
-    width: 100px;
-    margin: 0px 25px 5px;
-    transition: all 0.2s ease-in-out;
-}
-
-.gear {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4vw;
-    width: 4vw;
-}
-
-.gear > a > img {
-    height: 80%;
-    width: 80%;
-}
-
-.nav-tab {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.gear > img {
-    height: 4vw;
-    width: 4vw;
-}
-
-.nav-btn > a {
-    font-family: sans-serif;
-    font-size: 1.2rem;
-    color: #fff;
-    text-decoration: none;
-    letter-spacing: 2px;
-}
-
-.gear-right {
-    position: relative;
-    left: -40px;
-    width: 14vw;
-    margin-right: 2vw;
-}
-
-#nav-cont {
-    position: relative;
-    left: -50px;
-}
-
-.nav-btn > a > h3 {
-    padding: 0px 10px;
-    width: 16vw;
-    text-align: center;
-}
-
-.nav-btn > a > h3:hover,
-.mob-tab > a > h3:hover {
-    font-size: 1.2rem;
-    color: #fff0b4;
-    transition: all 0.2s ease-in-out;
-}
-
-.mob-tab > a > h3:hover {
-    font-size: 1.6rem;
-}
-
-.nav-btn > a > h3:active,
-.mob-tab > a > h3:active {
-    color: #f5c509;
-}
-
-.cross:hover {
-    font-size: 50px;
-    transform: rotate(90deg);
-    transition: all 0.2s ease-in-out;
-}
-
-/* Desktop Navbar Ends Here */
-
-/* Phone Navbar Begins Here */
-
-.black-overlay {
-    position: fixed;
-    z-index: 15;
-    width: 100vw;
-    height: 100vh;
-    right: 0px;
-    background-color: rgba(0, 0, 0, 0.75);
-    right: -100vw;
-}
-
-.dim-show {
-    right: 0px;
-}
-
-.nav-hid {
-    position: fixed;
-    z-index: 25;
-    right: 0px;
-    background-color: rgba(255, 107, 0, 0.5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    width: 60vw;
-    height: 100vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    right: -60vw;
-}
-
-.blur {
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-}
-
-.nav-show {
-    right: 0px;
-    transition: all 0.2s ease;
-}
-
-.nav-hide {
-    right: -60vw;
-    transition: all 0.2s ease;
-}
-
-.side-nav {
-    margin: 10px 10px;
-    padding-top: 20px;
-    width: 100%;
-    position: relative;
-}
-
-.tri {
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    align-items: end;
-    position: absolute;
-    z-index: -1;
-    bottom: 0px;
-}
-
-.top {
-    top: 0px;
-    align-items: start;
-}
-
-.top-left-tri {
-    width: 60%;
-    height: 100%;
-    display: flex;
-    clip-path: polygon(0 0, 0 100%, 100% 0);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 143, 63, 0.2),
-        rgba(255, 107, 0, 0.3)
-    );
-}
-
-.top-right-tri {
-    width: 40%;
-    height: 60%;
-    clip-path: polygon(0 0, 100% 0, 100% 100%);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 121, 25, 0.1),
-        rgba(255, 150, 3, 0.2)
-    );
-}
-
-.left-tri {
-    width: 40%;
-    height: 60%;
-    clip-path: polygon(0 0, 100% 100%, 0 100%);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 143, 63, 0.2),
-        rgba(255, 107, 0, 0.3)
-    );
-}
-
-.right-tri {
-    width: 60%;
-    height: 100%;
-    display: flex;
-    clip-path: polygon(100% 0, 100% 100%, 0 100%);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 121, 25, 0.1),
-        rgba(255, 150, 3, 0.2)
-    );
-}
-
-.in-tri {
-    width: 60%;
-    height: 40%;
-    bottom: 0px;
-    right: 0px;
-    position: absolute;
-    clip-path: polygon(100% 0, 100% 100%, 0 100%);
-    background: linear-gradient(
-        45deg,
-        rgba(96, 40, 0, 0.1),
-        rgba(244, 152, 23, 0.856)
-    );
-}
-
-.top-in-tri {
-    top: 0px;
-    left: 0px;
-    clip-path: polygon(0 0, 0 100%, 100% 0);
-    background: linear-gradient(
-        135deg,
-        rgba(96, 40, 0, 0.1),
-        rgba(244, 152, 23, 0.856)
-    );
-}
-
-.mob-tab {
-    position: relative;
-    margin: 20px 20px 100px;
-}
-
-.side-nav > div > a > h3 {
-    margin-top: 20px;
-    font-family: RobotoRegular, sans-serif;
-    font-size: 1.3rem;
-    letter-spacing: 1px;
-}
-
-.mob-link {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-.cross {
-    text-align: center;
-    font-size: 40px;
-    color: #ffffff;
-    position: relative;
-    /* bottom: -100px; */
-    cursor: pointer;
-}
-
-.mob-gear > img {
-    height: 40px;
-    width: 40px;
-    position: fixed;
-    right: 30px;
-    top: 30px;
-    z-index: 30;
-    display: none;
-}
-
-.gear-rot {
-    transform: rotate(270deg);
-    transition: all 1.5s ease-out;
-}
-
-.anti-rot {
-    transform: rotate(0deg);
-    transition: all 1.5s ease-out;
-}
-
-/* Phone Navbar Ends Here  */
+} */
 
 /* BODY OF PAGE BEGINS HERE */
 
-/*SPONSOR PAGE CLASSES*/
-
-/* Orange Banner Starts */
-.banner {
-    background-color: #ff6b00;
-    background-image: url("assets/bg.svg");
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh + 25px);
-    width: 100%;
-}
-
-.banner > div {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    /* max-width: 60vw; */
-}
-
-.title-text {
-    font-size: 9rem;
-    font-family: LexendExtraBold, sans-serif;
-    color: #fff5cf;
-    transition: all 0.1s ease-in-out;
-}
-
-.title-text + div > p {
-    font-family: sans-serif;
-    font-size: 1.3rem;
-    color: #fff5cf;
-    line-height: 2rem;
-    letter-spacing: 1px;
-    font-weight: thin;
-    margin: 20px 20px 0px;
-    width: 60vw;
-}
-
-/* Orange Banner Ends */
-
-/* sponsors list Starts */
-.overlay-box {
-    background-color: #fff5cf;
-    width: 100%;
-    border-radius: 25px 25px 0px 0px;
-    position: relative;
-    bottom: 25px;
-}
-
-.body-content {
-    width: 100%;
-    position: relative;
-    padding: 40px 0px 100px;
-    transition: all 0.1s ease-in-out;
-}
-
-.sponsor-type {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 100px 10px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.spon-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.spon-title > h4 {
-    font-size: 2.2rem;
-    font-family: LexendBold, sans-serif;
-    font-weight: 400;
-    margin: 12px;
-    text-align: center;
-}
-
-.spon-title > hr {
-    width: 50%;
-    height: 2px;
-    border: none;
-    background-image: linear-gradient(90deg, #ff9f5a 0%, #ff6b00 100%);
-    border-radius: 10px;
-}
-
-.spon-list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.spon {
-    margin: 20px;
-}
-
-.spon-img {
-    height: 22vw;
-    width: 26vw;
-    min-height: 220px;
-    min-width: 250px;
-    margin-top: 30px;
-    cursor: pointer;
-    border-radius: 12px;
-    background: url("assets/Sponsor.png") no-repeat center;
-    background-size: 200%;
-}
-
-.spon-name {
-    width: 100%;
-    color: #ff6b00;
-    font-weight: 200;
-    font-size: 1.3rem;
-    margin: 5px;
-}
-
-/* sponsors list Ends */
-
-/* SPONSORS PAGE CLASSES ENDS */
 /* LANDING PAGE CLASSES STARTS */
 
 /* Banner Starts */
+.banner {
+    background-image: url("assets_team/vector-background.jpg");
+}
 /* Banner Ends */
 
 /* Body Starts */
@@ -832,102 +414,6 @@ body {
 
 /* Body Ends */
 
-/* Footer Starts */
-.footer {
-    bottom: 50px;
-    background-color: #131313;
-    padding: 20px;
-}
-
-.foot-content {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: top;
-    color: #ffffff;
-    font-family: lexendRegular, sans-serif;
-}
-
-.f-logo-box {
-    margin: 90px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.f-logo-box > div {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: space-around;
-    padding: 10px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-gear {
-    background-image: url("assets/gear.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 160px;
-    width: 160px;
-    margin: 30px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-logo {
-    background-image: url("assets/logo-white.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 150px;
-    height: 120px;
-    margin: 30px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.logo-des {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    letter-spacing: 1px;
-    font-size: 1.2rem;
-    line-height: 30px;
-
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-text {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    color: #ffffff;
-    margin: 90px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-text > div {
-    margin: 30px 20px;
-    text-align: center;
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-text > div > h4 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    font-size: 2rem;
-    margin: 10px 20px 50px;
-    transition: all 0.1s ease-in-out;
-}
-
-.foot-text > div > p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    letter-spacing: 1px;
-    font-size: 1.45rem;
-    margin: 15px 0px;
-    transition: all 0.1s ease-in-out;
-}
-
 .icons {
     display: flex;
     justify-content: center;
@@ -1036,15 +522,15 @@ body {
 
 /* Large Devices (Desktops) till 992px*/
 @media (max-width: 992px) {
-    .navbar {
+    /* .navbar {
         background-color: transparent;
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: none;
-    }
+    } */
 
-    .nav-tab {
+    /* .nav-tab {
         display: none;
-    }
+    } */
 
     .mob-gear > img {
         display: block;
@@ -1060,9 +546,13 @@ body {
         width: 100%;
     }
 
+    
+    
     .title-text {
         font-size: clamp(3rem, 10vw, 7rem);
+        
     }
+    
 
     .sponsor-type {
         padding-top: 60px;
@@ -1160,10 +650,6 @@ body {
 @media (max-width: 780px) {
     .tri {
         height: 35vh;
-    }
-
-    .body-content {
-        padding: 20px 0px 60px;
     }
 
     .spon-title > h4 {
@@ -1470,7 +956,7 @@ body {
 }
 
 .event-outline {
-    background-color: #fff5cf;
+    background-color: #ff6b00;
     border-radius: 15px;
     width: 45%;
 }
@@ -1506,59 +992,273 @@ body {
     left: 25px;
 }
 
+.merch-img {
+    background-color: #131313;
+    height: 100%;
+    margin-bottom: 25px;
+    border-radius: 15px;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
 
-/* PAST SPONSORS COMPONENT */
+.merch-img:hover {
+    transform: scale(1.02);
+}
 
-.sponsors-container {
-    overflow: hidden;
-    width: 100%;
-    white-space: nowrap;
+.merch-img-container {
     position: relative;
-    padding: 20px 0; 
-  }
-  
-  .sponsors-slider {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1); /* Smoother easing */
+    transform-style: preserve-3d;
+    cursor: pointer;
+    margin-bottom: 25px;
+    perspective: 1000px; /* Adds better 3D effect */
+}
+
+.merch-img-container.flipped {
+    transform: rotateY(180deg);
+}
+
+.merch-img-front,
+.merch-img-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 15px;
+    background-color: #131313;
+    background-size: cover;
+    background-position: center;
+    -webkit-backface-visibility: hidden; /* For Safari */
+    transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+}
+
+.merch-img-back {
+    transform: rotateY(180deg);
+}
+
+/* Optional: Add hover effect */
+.merch-img-container:hover {
+    transform: rotateY(5deg) scale(1.02);
+}
+
+.merch-img-container.flipped:hover {
+    transform: rotateY(175deg) scale(1.02);
+}
+.article-l {
     display: flex;
-    gap: 30px; 
-    width: max-content;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-  }
-  
-  .sponsors-slider img {
-    width: 250px; 
-    height: 160px; 
-    object-fit: cover;
-    border-radius: 20px; 
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .sponsors-slider img:hover {
-    transform: scale(1.2); 
-  }
-  
-  @keyframes slideLeft {
-    from {
-      transform: translateX(0);
+    margin: 30px 0px;
+}
+
+.head-title-l {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-align: left;
+}
+
+.big-title {
+    font-family: PoppinsExtraBold, sans-serif;
+    font-size: 6rem;
+    line-height: 1;
+    white-space: nowrap;
+}
+
+.headline-l {
+    margin: 15px 30px 10px;
+    font-size: 1.6rem;
+    font-family: RobotoRegular, sans-serif;
+    font-weight: 800;
+    color: #ff6b00;
+    letter-spacing: 1px;
+}
+
+.head-des {
+    font-family: Roboto, sans-serif;
+    font-weight: 900;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    margin-top: 20px;
+}
+
+.merches {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
+    gap: 2rem;
+    width: 100%;
+}
+
+.merch {
+    flex: 1;
+    min-width: 300px;
+    max-width: calc(33.33% - 1.33rem);
+    margin: 60px 0px 120px;
+}
+
+/* InsightArena slider fixes */
+.slider-container {
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 2rem;
+    width: 100%;
+}
+
+.slider {
+    display: flex;
+    width: max-content;
+    gap: 1rem;
+}
+
+.card {
+    flex: 0 0 300px;
+    height: 200px;
+    padding: 1.5rem;
+    background-color: #000;
+    border: 1px solid #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-radius: 4px;
+    color: white;
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+/* Update animation speeds and timing */
+.slider-ltr {
+    animation: slide-left 40s linear infinite;
+}
+
+.slider-rtl {
+    animation: slide-right 40s linear infinite;
+}
+
+@keyframes slide-left {
+    0% {
+        transform: translateX(0);
     }
-    to {
-      transform: translateX(-50%);
+    100% {
+        transform: translateX(-50%);
     }
-  }
-  
-  .slide-left {
-    animation: slideLeft 10s linear infinite;
-  }
-  
-  @keyframes slideRight {
-    from {
-      transform: translateX(-50%);
+}
+
+@keyframes slide-right {
+    0% {
+        transform: translateX(-50%);
     }
-    to {
-      transform: translateX(0);
+    100% {
+        transform: translateX(0);
     }
-  }
-  
-  .slide-right {
-    animation: slideRight 10s linear infinite;
-  }
-  
+}
+
+/* Responsive styles */
+@media (max-width: 1200px) {
+    .merch {
+        max-width: calc(50% - 1rem);
+    }
+
+    .card {
+        flex: 0 0 250px;
+    }
+}
+
+@media (max-width: 992px) {
+    .slider-ltr,
+    .slider-rtl {
+        animation-duration: 30s;
+    }
+
+    .card {
+        flex: 0 0 220px;
+        height: 180px;
+        padding: 1.25rem;
+    }
+
+    .card h3 {
+        font-size: 1.4rem;
+    }
+
+    .card p {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .merch {
+        max-width: 100%;
+        margin: 30px 0;
+    }
+
+    .slider-container {
+        margin-bottom: 1.5rem;
+    }
+
+    .card {
+        flex: 0 0 200px;
+        height: 160px;
+        padding: 1rem;
+    }
+
+    .slider-ltr,
+    .slider-rtl {
+        animation-duration: 25s;
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        flex: 0 0 180px;
+        height: 140px;
+    }
+
+    .card h3 {
+        font-size: 1.2rem;
+    }
+
+    .card p {
+        font-size: 0.8rem;
+    }
+
+    .slider-ltr,
+    .slider-rtl {
+        animation-duration: 20s;
+    }
+}
+
+/* Pause animations on hover */
+.slider-container:hover .slider {
+    animation-play-state: paused;
+}
+
+/* Smooth animation performance */
+.slider {
+    will-change: transform;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+/* Add touch interaction support */
+@media (hover: none) {
+    .card:hover {
+        transform: none;
+    }
+}
+
+/* Prevent animation flicker */
+.slider-container {
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+}
