--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -17,7 +17,8 @@
     justify-content: center;
     padding: 2rem 4rem;
     padding-top: 80px; /* Add padding to account for fixed navbar */
-    overflow: hidden;
+    
+    flow: hidden;
 }
 
 .hero-background {
